# nefertem

./: .gitignore  README.md  TODO.txt  basic_usage_example.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
core/: README.md  pyproject.toml  requirements.txt
core/nefertem/: __init__.py
core/nefertem/client/: builder.py
core/nefertem/metadata/: env.py  report.py
core/nefertem/plugins/: builder.py  plugin.py
core/nefertem/readers/: registry.py
core/nefertem/readers/objects/: file.py  native.py
core/nefertem/resources/: data_resource.py
core/nefertem/run/: builder.py  handler.py  run.py  run_info.py
core/nefertem/stores/: builder.py  kinds.py
core/nefertem/stores/input/objects/: _base.py  dummy.py  remote.py  s3.py  sql.py
core/nefertem/stores/output/objects/: dummy.py
core/nefertem_core/: __init__.py
core/nefertem_core/client/: builder.py  client.py
core/nefertem_core/metadata/: blob.py
core/nefertem_core/plugins/: builder.py  factory.py  plugin.py
core/nefertem_core/readers/: builder.py  registry.py
core/nefertem_core/readers/objects/: _base.py  file.py  native.py
core/nefertem_core/resources/: data_resource.py
core/nefertem_core/run/: builder.py  config.py  handler.py  run.py  run_info.py  status.py
core/nefertem_core/stores/: builder.py
core/nefertem_core/stores/input/: registry.py
core/nefertem_core/stores/input/objects/: _base.py  dummy.py  local.py  remote.py  s3.py  sql.py
core/nefertem_core/stores/output/: registry.py
core/nefertem_core/stores/output/objects/: dummy.py  local.py
core/nefertem_core/utils/: logger.py
core/tests/: conftest.py
core/tests/unit_test/client/: test_client.py  test_run_builder.py  test_store_factory.py  test_store_handler.py
core/tests/unit_test/data_reader/base_reader/: test_base_buffer_reader.py  test_base_file_reader.py  test_base_native_reader.py
core/tests/unit_test/data_reader/pandas_reader/: test_pandas_dataframe_duckdb_reader.py  test_pandas_dataframe_file_reader.py  test_pandas_dataframe_sql_reader.py
core/tests/unit_test/data_reader/polars_reader/: test_polars_dataframe_duckdb_reader.py  test_polars_dataframe_file_reader.py  test_polars_dataframe_sql_reader.py
core/tests/unit_test/metadata/: test_blob_log.py  test_env_log.py  test_nefertem_reports.py
core/tests/unit_test/plugins/: test_base_plugin.py  test_plugin_factory.py  utils_plugin_tests.py
core/tests/unit_test/plugins/inference/: test_dummy.py  test_frictionless.py  test_inference_plugin.py
core/tests/unit_test/plugins/profiling/: test_dummy.py  test_evidently.py  test_frictionless.py  test_profiling_plugin.py  test_ydata_profiling.py
core/tests/unit_test/plugins/utils/: test_frictionless_utils.py  test_plugin_utils.py  test_sql_checks.py
core/tests/unit_test/plugins/validation/: test_duckdb.py  test_dummy.py  test_evidently.py  test_frictionless.py  test_sqlalchemy.py  test_validation_plugin.py
core/tests/unit_test/run/: test_run.py  test_run_handler.py  test_run_info.py
core/tests/unit_test/store_artifact/: test_artifact_store.py  test_dummy_artifact_store.py  test_local_artifact_store.py  test_s3_artifact_store.py  test_sql_artifact_store.py
core/tests/unit_test/store_metadata/: test_dummy_metadata_store.py  test_metadata_store.py
core/tests/unit_test/utils/: test_exceptions.py  test_file_utils.py  test_io_utils.py  test_uri_utils.py  test_utils.py
docs/: 00-installation.md  00-overview.md  01-installation.md  02-client.md  02-configuration.md  03-modules.md  03-stores.md  04-authentication.md  05-dataresource.md  authentication.md  constraints.rst  dataresource.rst  inference.rst  metadata.rst  metrics.rst  overview.rst  profiling.rst  run.rst  stores.rst  validation.rst  workflow.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/: conf.py
modules/inference/: pyproject.toml  requirements.txt
nefertem/: __init__.py
nefertem-inference/: pyproject.toml
nefertem-profiling/: pyproject.toml
nefertem-profiling/nefertem_profiling/: config.py
nefertem-profiling/nefertem_profiling/metadata/: report.py
nefertem-profiling/nefertem_profiling/plugins/: builder.py  metric.py  plugin.py
nefertem-profiling/nefertem_profiling/plugins/_dummy/: builder.py  plugin.py
nefertem-profiling/nefertem_profiling/plugins/evidently/: builder.py  metrics.py  plugin.py
nefertem-profiling/nefertem_profiling/plugins/frictionless/: builder.py  plugin.py
nefertem-profiling/nefertem_profiling/plugins/ydata_profiling/: builder.py  plugin.py
nefertem-profiling/nefertem_profiling/run/: run.py
nefertem-validation/: pyproject.toml
nefertem-validation/nefertem_validation/: config.py
nefertem-validation/nefertem_validation/metadata/: report.py
nefertem-validation/nefertem_validation/plugins/: builder.py  plugin.py  utils.py
nefertem-validation/nefertem_validation/plugins/_dummy/: builder.py  plugin.py
nefertem-validation/nefertem_validation/plugins/duckdb/: builder.py  plugin.py  utils.py
nefertem-validation/nefertem_validation/plugins/evidently/: builder.py  plugin.py
nefertem-validation/nefertem_validation/plugins/frictionless/: builder.py  constraints.py  plugin.py  utils.py
nefertem-validation/nefertem_validation/plugins/sqlalchemy/: builder.py  constraints.py  plugin.py
nefertem-validation/nefertem_validation/run/: run.py
plugins/frictionless-validation/: pyproject.toml
plugins/frictionless-validation/nefertem_validation_frictionless/: __init__.py  builder.py  constraints.py  plugin.py  utils.py
plugins/nefertem_metric_evidently/: pyproject.toml
plugins/nefertem_metric_evidently/nefertem_metric_evidently/: builder.py  plugin.py
plugins/sqlalchemy-validation/: pyproject.toml
plugins/sqlalchemy-validation/nefertem_validation_sqlalchemy/: __init__.py  builder.py  constraint.py  plugin.py  reader.py  utils.py
plugins/ydata-profiling-profiling/: pyproject.toml
plugins/ydata-profiling-profiling/nefertem_profiling_ydata_profiling/: __init__.py  builder.py  plugin.py  reader.py  utils.py
tests/: conftest.py
(+448 files in other folders)
