[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nefertem-validation"
version = "1.0.0"
description = "Python data validation library"
readme = "README.md"
authors = [
    { name = "Fondazione Bruno Kessler", email = "dslab@fbk.eu" },
    { name = "Matteo Martini", email = "mmartini@fbk.eu" }
]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]
keywords = ["data", "validation", "quality"]
dependencies = [
    "pydantic==2.4.2",
]

requires-python = ">=3.10"

[project.optional-dependencies]
all = [
    "frictionless==5.16.0",
    "ydata-profiling==4.6.1",
    "evidently==0.4.0",
    "duckdb==0.9.1",
    "SQLAlchemy==2.0.22",
    "psycopg2-binary==2.9.3",
]
frictionless = [
    "frictionless==5.16.0",

]
duckdb = [
    "duckdb==0.9.1",
    "pandas==2.0.3",
]
sqlalchemy = [
    "SQLAlchemy==2.0.22",
    "psycopg2-binary==2.9.3",
    "pandas==2.0.3",
]
evidently = [
    "evidently==0.4.0",

]

[project.urls]
Homepage = "https://github.com/scc-digitalhub/nefertem-validation"

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]
