[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nefertem-validation-frictionless"
version = "2.0.2"
description = "Python data validation library"
readme = "README.md"
authors = [
    { name = "Fondazione Bruno Kessler", email = "dslab@fbk.eu" },
    { name = "Matteo Martini", email = "mmartini@fbk.eu" }
]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["data", "validation", "quality"]
dependencies = [
    "nefertem-validation~=2.0",
    "frictionless==5.15.0",
]

requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/scc-digitalhub/nefertem"

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.bumpver]
current_version = "2.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = false
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
